
(rule
  (alias runtest)
  (deps llist.json)
  (package avro)
  (action (run ./bin/parse_print_parse.exe %{deps})))


(rule
  (alias runtest)
  (deps cards.json)
  (package avro)
  (action (run ./bin/parse_print_parse.exe %{deps})))


(rule
  (alias runtest)
  (deps avro_file_header.json)
  (package avro)
  (action (run ./bin/parse_print_parse.exe %{deps})))

(rule
  (alias runtest)
  (deps records.json)
  (package avro)
  (action (run ./bin/parse_print_parse.exe %{deps})))

(rule
  (alias runtest)
  (deps employee.json)
  (package avro)
  (action (run ./bin/parse_print_parse.exe %{deps})))

(rule
  (targets records.ml)
  (deps records.json)
  ;(package avro)
  (action (run %{bin:avro-compiler} %{deps} -o %{targets})))

(executable
  (name records_test)
  (modules records_test records)
  (libraries avro))

(rule
  (targets records_hash)
  (locks /thash)
  (package avro)
  (action
    (progn
      (setenv
        "N" "100_000"
        (setenv
          "OUT" "tmp.data"
          (run ./records_test.exe)))
      (with-stdout-to %{targets}
                      (run sha256sum "tmp.data")))))

(rule
  (alias runtest)
  (deps records_hash)
  (package avro)
  (action (diff records_hash.expected records_hash)))

(rule
  (alias runtest)
  (locks /thash)
  (package avro)
  (action
    (setenv
      "CODEC" "deflate"
      (setenv
        "N" "100_000"
        (run ./records_test.exe)))))

(rule
  (targets employee.ml)
  (deps employee.json)
  (action (run %{bin:avro-compiler} %{deps} -o %{targets})))

(executable
  (name employee_test)
  (modules employee_test employee)
  (libraries avro unix))

(rule
  (targets employee_test_str.out)
  (locks /thash)
  (package avro)
  (action
    (with-stdout-to
      %{targets}
      (run ./employee_test.exe -n 1_000_000 --codec=null))))

(rule
  (alias runtest)
  (deps employee_test_str.out)
  (package avro)
  (action (diff employee_test_str.expected employee_test_str.out)))

(rule
  (targets employee_test_file.out)
  (locks /thash)
  (package avro)
  (action
    (with-stdout-to
      %{targets}
      (run ./employee_test.exe -o employees.avro -n 1_000_000 --codec=null))))

(rule
  (alias runtest)
  (deps employee_test_file.out)
  (package avro)
  (action (diff employee_test_file.expected employee_test_file.out)))

(rule
  (targets employee_test_file_loa.out)
  (locks /thash)
  (package avro)
  (action
    (with-stdout-to
      %{targets}
      (run ./employee_test.exe -o employees.avro
           -n 1_000_000 --list-of-array --codec=null))))

(rule
  (alias runtest)
  (deps employee_test_file_loa.out)
  (package avro)
  (action (diff employee_test_file_loa.expected employee_test_file_loa.out)))

(rule
  (alias runtest)
  (locks /thash)
  (package avro)
  (action (run ./employee_test.exe -n 1_000_000 --codec=deflate)))

(rule
  (alias runtest)
  (locks /thash)
  (package avro)
  (action (run ./employee_test.exe -o employees.avro -n 1_000_000 --codec=deflate)))

(rule
  (alias runtest)
  (locks /thash)
  (package avro)
  (action (run ./employee_test.exe -o employees.avro
           -n 1_000_000 --list-of-array --codec=deflate)))

(env
  (_ (flags :standard -warn-error -a)))

