
(rule
  (targets user.ml)
  (deps user.avsc)
  (action (run %{bin:avro-compiler} %{deps} -o %{targets})))

(executable
  (name read)
  (libraries avro))

(rule
  (targets test.out)
  (deps users.avro)
  (action (with-stdout-to %{targets} (run ./read.exe %{deps}))))

(rule
  (alias runtest)
  (package avro)
  (action (diff test.expected test.out)))
